2008-11-06  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #24762.
	* include/avr/wdt.h: Fix conditional compilation.
	* include/avr/sleep.h: Same.

2008-11-03  Eric B. Weddington  <eric.weddington@atmel.com>

	* devtools/gen-avr-lib-tree.sh: Add missing semicolons for new devices.

2008-11-02  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox128a1.h: Update header file from XML part description
	files.
	* include/avr/iox64a1.h: Same.
	* include/avr/iox64a3.h: Same.
	* include/avr/iox128a3.h: Same.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox256a3b.h: Same.
	Add support for ATxmega64A3, ATxmega128A3, ATxmega256A3, ATxmega256A3B.
	* configure.ac: Add support for new devices.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same. Also fix register names.
	* include/avr/wdt.h: Same.
	* include/avr/sleep.h: Same.

2008-10-30  Eric B. Weddington  <eric.weddington@atmel.com>

	Add support for ATmega32U6.
	* configure.ac: Add support for ATmega32U6.
	* devtools/gen-avr-lib-tree.sh: Same.
	* include/avr/Makefile.am: Same.
	* include/avr/io.h: Same.
	* doc/api/main_page.dox: Same.
	* doc/api/using-tools.dox: Same.
	* include/avr/power.h: Same.
	* include/avr/wdt.h: Same.
	* include/avr/sleep.h: Same.
	* include/avr/iom32u6.h: New file.

2008-10-28  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/iox64a3.h: Update the xmega A3 header files.
	* include/avr/iox128a3.h: Same.
	* include/avr/iox256a3.h: Same.
	* include/avr/iox256a3b.h: Same.
	* include/avr/iox256a3v.h: Remove file. Device does not exist.

2008-10-21  Eric B. Weddington  <eric.weddington@atmel.com>

	Patch #6517 submitted by Anton Ivanov.
	* include/avr/pgmspace.h: Add float support to pgmspace.h.

2008-10-21  Eric B. Weddington  <eric.weddington@atmel.com>
